--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /Assets/EZAssets
 /Assets/EZAssets.meta
-/Assets/EZDatabase
-/Assets/EZDatabase.meta
+/Assets/EZData
+/Assets/EZData.meta
 /Assets/EZLog
 /Assets/EZLog.meta
 
