--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /Assets/_Temp.meta
 /Assets/Resources
 /Assets/Resources.meta
+/Assets/Script_CSharp
+/Assets/Script_CSharp.meta
 /Assets/Script_Lua_txt
 /Assets/Script_Lua_txt.meta
 /Assets/StreamingAssets
