--- a/Assets/EZUnity/Editor/Unity.EZUnity.Editor.asmdef
+++ b/Assets/EZUnity/Editor/Unity.EZUnity.Editor.asmdef
@@ -4,7 +4,9 @@
         "Unity.EZUnity"
     ],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
