--- a/Assets/EZUnity/package.json
+++ b/Assets/EZUnity/package.json
@@ -2,7 +2,21 @@
     "name": "com.ezhex1991.ezunity",
     "displayName": "EZUnity",
     "version": "1.0.0",
-    "unity": "2018.3",
+    "unity": "2018.2",
     "description": "EZUnity",
-    "dependencies": {}
+    "dependencies": {},
+    "keywords": [
+        "dynamicbone",
+        "dynamic-bone",
+        "physicsbone",
+        "physics-bone",
+        "bezier",
+        "furshader",
+        "fur-shader"
+    ],
+    "author": {
+        "name": "Zack John",
+        "email": "ezhex1991@outlook.com",
+        "url": "https://github.com/EZhex1991/EZUnity"
+    }
 }
