Add EZAnimation as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/EZUnity/EZPhysicsBone"]
 	path = Assets/EZUnity/EZPhysicsBone
 	url = https://github.com/EZhex1991/EZPhysicsBone
+[submodule "Assets/EZUnity/EZAnimation"]
+	path = Assets/EZUnity/EZAnimation
+	url = https://github.com/EZhex1991/EZAnimation
