--- a/Assets/EZUnity/Runtime/Unity.EZUnity.asmdef
+++ b/Assets/EZUnity/Runtime/Unity.EZUnity.asmdef
@@ -1,3 +1,13 @@
-﻿{
-	"name": "Unity.EZUnity"
+{
+    "name": "Unity.EZUnity",
+    "references": [],
+    "optionalUnityReferences": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": []
 }
