update EZPhysicsBone, add ignore items

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ Assets/XLua/Gen.meta
 # Others
 Assets/VDProject
 Assets/VDProject.meta
+Assets/AssetStoreTools
+Assets/AssetStoreTools.meta
 
 # Windows image file caches
 Thumbs.db
