--- a/Assets/EZhex1991/EZUnity/package.json
+++ b/Assets/EZhex1991/EZUnity/package.json
@@ -5,15 +5,7 @@
     "unity": "2018.2",
     "description": "EZUnity",
     "dependencies": {},
-    "keywords": [
-        "dynamicbone",
-        "dynamic-bone",
-        "physicsbone",
-        "physics-bone",
-        "bezier",
-        "furshader",
-        "fur-shader"
-    ],
+    "keywords": [],
     "author": {
         "name": "Zack John",
         "email": "ezhex1991@outlook.com",
