--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,12 @@ Assets/EZhex1991/EZAnimation
 Assets/EZhex1991/EZAnimation.meta
 Assets/EZhex1991/EZPhysicsBone
 Assets/EZhex1991/EZPhysicsBone.meta
+Assets/EZhex1991/EZPostProcessing
+Assets/EZhex1991/EZPostProcessing.meta
 Assets/AssetStoreTools
 Assets/AssetStoreTools.meta
+Assets/PostProcessing
+Assets/PostProcessing.meta
 
 # Windows image file caches
 Thumbs.db
