--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ Assets/XLua/Gen/
 Assets/XLua/Gen.meta
 
 # Others
+Assets/_Temp*
 Assets/EZhex1991/EZAnimation
 Assets/EZhex1991/EZAnimation.meta
 Assets/EZhex1991/EZPostProcessing
