--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.unity.package-manager-ui": "2.0.13",
-    "com.unity.postprocessing": "3.0.3",
-    "com.unity.textmeshpro": "1.4.1",
+    "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.postprocessing": "3.1.1",
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.timeline": "1.4.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
