--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "com.unity.package-manager-ui": "2.0.13",
+    "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.ide.vscode": "1.2.3",
     "com.unity.postprocessing": "3.0.3",
-    "com.unity.textmeshpro": "1.4.1",
-    "com.unity.modules.ai": "1.0.0",
+    "com.unity.timeline": "1.2.18",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
