--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 ProjectSettings/UPRSettings.asset
+ProjectSettings/EZhex1991/EZScriptSettings.asset
